--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
     <title>HAPPY BIRTHDAY!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet">
@@ -151,17 +152,35 @@
         }
 
         p.birthday {
-            font-size: 24px;
-            padding: 0px 325px;
+            font-size: 18px;
+            padding: 0px 0px;
             font-weight: 400;
             font-family: 'Heebo', sans-serif;
             color: #eee0cb;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            text-align: right;
         }
 
         img.motek {
-            width: 800px;
-            height: 800px;
+            width: 450px;
+            height: 600px;
             object-fit: cover;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+        .title{
+            font-family: 'Nanum Pen Script', cursive;
+            color:#baa898;
+            font-size: 48px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
         }
     </style>
 </head>
@@ -170,13 +189,15 @@
     <div id="board"></div>
     <center>
         <h1>
-            <font style="font-family: 'Nanum Pen Script', cursive;color:#baa898;font-size: 48px;">HAPPY BIRTHDAY MOOOOOOOTEK!<font>
+            <font class="title" >HAPPY BIRTHDAY
+                MOOOOOOOTEK!<font>
         </h1>
         <p class="birthday">&#127881; &#129505; המון מזל טוב מווווווותק<br>
             עשיתי את זה בכמה דקות עם המון עזרה מהאינטרנט אז אל תתלהבי יותר מדי <br>
             &#128747;מאחל לך את כל הטוב שבעולם, ומאחל לנו עוד המון שנים של כיף ביחד וחגיגות יומולדת בחו"ל <br>
             את החברה הכי טובה שלי, אני כל כך שמח שאת חלק מהחיים שלי<br>
-            אני אוהב אותך בלי סוף, יש בך כל כך הרבה אהבה ונתינה, עם כל האשכנטוזיות את הבן האדם עם הלב הכי טוב שאני מכיר ואכיר <br>
+            אני אוהב אותך בלי סוף, יש בך כל כך הרבה אהבה ונתינה, עם כל האשכנטוזיות את הבן האדם עם הלב הכי טוב שאני מכיר
+            ואכיר <br>
             לא רוצה להפוך את זה לקיטשי מדי אז תראי מה הכנתי לך (שוב, עם הרבה עזרה מהאינטרנט) <br>
             &#127878; תלחצי על המסך <br>
             &#129505; &#129505;אוהב אותך הכי בעולם יפה שלי יא מותק אחת</p>
