--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         }
 
         p.birthday {
+            width: 400px;
             font-size: 18px;
             padding: 0px 0px;
             font-weight: 400;
