--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <style>
         body {
             background-color: #848586;
+            margin: 0px 0px;
         }
 
         @keyframes firework-animation {
@@ -166,7 +167,7 @@
         }
 
         img.motek {
-            width: 450px;
+            width: 400px;
             height: 600px;
             object-fit: cover;
             display: flex;
