--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         }
 
         p.birthday {
-            width: 400px;
+            width: 380px;
             font-size: 18px;
             padding: 0px 0px;
             font-weight: 400;
@@ -163,7 +163,7 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: flex-start;
-            text-align: right;
+            text-align: center;
         }
 
         img.motek {
