--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
             ואכיר <br>
             לא רוצה להפוך את זה לקיטשי מדי אז תראי מה הכנתי לך (שוב, עם הרבה עזרה מהאינטרנט) <br>
             &#127878; תלחצי על המסך <br>
-            &#129505; &#129505;אוהב אותך הכי בעולם יפה שלי יא מותק אחת</p>
+            אוהב אותך הכי בעולם יפה שלי יא מותק אחת <br>
+            &#129505; &#129505;
+        
+        </p>
 
         <img class="motek" src="https://drive.google.com/uc?id=1FnkVL5QyV3ip-YjN7qb0DyLFB60qspZp" />
     </center>
