--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         img.motek {
             width: 400px;
             height: 600px;
-            object-fit: cover;
+            object-fit: scale-down;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
@@ -204,7 +204,6 @@
             &#127878; תלחצי על המסך <br>
             אוהב אותך הכי בעולם יפה שלי יא מותק אחת <br>
             &#129505; &#129505;
-        
         </p>
 
         <img class="motek" src="https://drive.google.com/uc?id=1FnkVL5QyV3ip-YjN7qb0DyLFB60qspZp" />
